--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
 
-
+    <script src="./assets/scripts/game.js"></script>
     <script src="./assets/scripts/script.js"></script>
 </body>
 </html>
